c4prj1_deck/grade.txt
Grading at Wed Jul 29 14:48:28 UTC 2020
Compiling deck.c -> deck.o
deck.c:34:18: error: unknown type name ‘dect_t’
 void add_card_to(dect_t* deck,card_t c)
                  ^
deck.c: In function ‘add_empty_card’:
deck.c:44:36: error: ‘n_cards’ undeclared (first use in this function)
   deck->cards=realloc(deck->cards,(n_cards+1)*sizeof(*deck->cards));
                                    ^
deck.c:44:36: note: each undeclared identifier is reported only once for each function it appears in
deck.c: In function ‘make_deck_exclude’:
deck.c:54:7: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
   excl->arr=NULL;
       ^
deck.c:61:8: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    excl->arr=realloc(excl->arr,(n_cards+1)*sizeof(*excl->arr));
        ^
deck.c:61:26: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    excl->arr=realloc(excl->arr,(n_cards+1)*sizeof(*excl->arr));
                          ^
deck.c:61:33: error: ‘n_cards’ undeclared (first use in this function)
    excl->arr=realloc(excl->arr,(n_cards+1)*sizeof(*excl->arr));
                                 ^
deck.c:61:56: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    excl->arr=realloc(excl->arr,(n_cards+1)*sizeof(*excl->arr));
                                                        ^
deck.c:62:8: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    excl->arr[n_cards]=malloc(sizeof(card_t));
        ^
deck.c:63:8: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    excl->arr[n_cards]->value=temp.value;
        ^
deck.c:64:8: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    excl->arr[n_cards]->suit=temp.suit;
        ^
deck.c: In function ‘build_remaining_deck’:
deck.c:74:16: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
   excluded_deck->arr=NULL;
                ^
deck.c:79:15: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    if(hands[i]->arr[j]->value||hands[i]->arr[j]->suit)
               ^
deck.c:79:40: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
    if(hands[i]->arr[j]->value||hands[i]->arr[j]->suit)
                                        ^
deck.c:81:43: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘arr’
        add_card_to(excluded_deck,*hands[i]->arr[j]);
                                           ^
deck.c: In function ‘add_empty_card’:
deck.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
